2008-05-05  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-remote-connect-dialog.c:
	Fixed extra-line in mount_enclosing_ready_cb

2008-05-04  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-remote-connect-dialog.c:
	More fixups for the dialog

2008-05-04  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-remote-connect-dialog.h:
	* src/baobab.c:
	
	Finished clean-up for gnome-vfs

2008-05-04  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-remote-connect-dialog.c:
	* src/baobab-remote-connect-dialog.h:
	* src/callbacks.c:
	First cut at gio port of the remote connect dialog (mostly borrowing
	code from nautilus).

2008-05-03  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c:
	* src/baobab.h:
	* src/baobab-scan.c:
	* src/baobab-treeview.c:
	* src/baobab-treeview.h:
	* src/callbacks.c:
	Store the parse name in the model so that we do not have to use
	path or uri condtionally to the fact that the file is local or remote.

2008-05-03  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c:
	* src/baobab.h:
	* src/baobab-scan.c:
	get the display name from gio instead of manually getting the basename.
	Also be robust to the fact that remote files have no path, so that
	needs to be checked before comparin with "/proc".

2008-05-03  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c:
	* src/baobab.h:
	now that baobab-scan has been ported to gio baobab_is_excluded_dir
	can be removed.

2008-05-03  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c:
	* src/baobab-scan.c:
	* src/baobab-utils.c:
	Some leak fixes and cleanups by Cosimo Cecchi.

2008-05-02  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-scan.c: pass in the GFileInfo to the recursive loop
	to avoid to call stat() again on each file.

2008-05-02  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c:
	Ref the location before rescanning otherwise the current location
	gets finalized. Also make sure the Rescan button is insensitive when