@@ -39,6 +39,8 @@ baobab_SOURCES = \
 	baobab-tree-map.h \
 	baobab-remote-connect-dialog.c \
 	baobab-remote-connect-dialog.h \
+	baobab-mount-operation.c \
+	baobab-mount-operation.h \
 	gedit-spinner.c \
 	gedit-spinner.h
 
