@@ -1,5 +1,16 @@
 2008-05-05  Fabio Marzocca  <thesaltydog@gmail.com>
 
+	* src/Makefile.am:
+	* src/baobab-mount-operation.c: 
+	* src/baobab-mount-operation.h:
+	* src/baobab-remote-connect-dialog.c:
+	* src/baobab-scan.c: 
+	
+	Added module baobab-mount-operation to handel remote volumes mounts.
+	Fixed permission check on loopdir
+
+2008-05-05  Fabio Marzocca  <thesaltydog@gmail.com>
+
 	* src/baobab-remote-connect-dialog.c:
 	Fixed extra-line in mount_enclosing_ready_cb
 
